--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: golang:1.15-buster
     restart: "no"
     volumes:
-      - ".:/go/src/dice-dout"
+      - ".:/go/src/github.com/koheishinpuku/dice-dout-api"
     ports:
       - "5001:5000"
     networks:
@@ -20,7 +20,7 @@ services:
     env_file:
       - .env
 
-    command: sh -c "cd /go/src/dice-dout && go get -u github.com/cosmtrek/air && air -c .air.conf"
+    command: sh -c "cd /go/src/github.com/koheishinpuku/dice-dout-api/app && go get -u github.com/cosmtrek/air && air -c .air.conf"
 
   spauth-db:
     container_name: dd-db
